Upgrade Pulsar dependency to 3.0.0